Fix the following issues: Error [ERR_HTTP_HEADERS_SENT] sent by the server Run/Stop problem Radio button alignments Client directory deletion

--- a/src/Components/Options/Options.module.css
+++ b/src/Components/Options/Options.module.css
@@ -2,12 +2,12 @@
     flex: 1 1 0;
     margin: 0.125rem;
     margin-left: 0.5rem;
-    line-height: 1.5rem;
 }
 .input{
     flex: 1 1 0;
     min-width: 2rem;
-    vertical-align: bottom;
+    margin: 0;;
+    vertical-align: middle;
 }
 .label::selection, .input::selection{
     background-color: transparent;
